LLM_on_Kubernetes/Inference_Platfrom/01-Base/SGLang/sglang-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sglang-ingress
  namespace: llm-inference
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: sglang.magedu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sglang-service
                port:
                  number: 30000
